08122013 -> bodrick  -> Fixed bug with namefixer, if print changes only, status was still being set to updated.
08122013 -> kevin    -> Catgorize S01E01E02 / S01E01A properly, clean up more files.
08112013 -> kevin    -> Clean up/fix bugs in a bunch of files in www/lib
08102013 -> kevin    -> Clean up postprocess.php
08092013 -> kevin    -> More regex in namecleaning.
08082013 -> kevin    -> Fix a bug in releases.php where releases under minimum file/size setting were not deleted.
						Add more regex for matching/name cleaning.
08072013 -> kevin    -> 7zip to decompress nfos froms zips during post process (/usr/bin/7za on ubuntu, 7z command line windows(untested on windows)).
						Fix many bugs in post proc.
08062013 -> sinfulj  -> Add a new theme (currently in alpha testing).
08052013 -> kevin    -> Clean up postprocess.php, make sure there are no duplicate names for releaseID's in the releasefiles table, more regex in namecleaning.
08052013 -> wtf911   -> Attempt to fix duplicate tvrage entries when running threaded.
08042013 -> sinfulj  -> Fix up some theme issues.	
08042013 -> kevin    ->	Add more regex, fix up a few issues, reset collection hash again with these changes.
08032013 -> kevin    ->	Update namecleaning, requires a reset of the collection hash.
08022013 -> kevin    -> When many releases are added at the same time the hash for the guid can be the same, so add mt_rand while hashing.
						Clean up postprocess.php a bit.
08012013 -> ThePeePs -> Add logging of failed site login attempts.
08012013 -> kevin    -> Add more regex to namecleaning.
07302013 -> kevin    -> Clean up binaries.php and backfill.php and attempting to fix the connection errors.
                        Modify files that use namecleaning to send the groupID.
                        Modify namecleaning collectionsCleaner to be notified if there are files or not.
                        Drop the name column on the collections table since it is useless now.